--- a/SerializingJson/SerializingJson.csproj
+++ b/SerializingJson/SerializingJson.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <!-- ADICIONAR ESSE ITEMGROUP PARA QUE O MÉTODO jsonConvert funcione.  -->
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+
 </Project>
